--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -4,6 +4,9 @@
     <title>AirBnB Clone</title>
     <link rel="stylesheet" href="./styles/4-common.css">
     <link rel="stylesheet" href="./styles/4-filters.css">
+    <link rel="stylesheet" href="./styles/3-header.css">
+    <link rel="stylesheet" href="./styles/3-footer.css">
+    
   </head>
   <body>
     <header></header>
