--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -13,9 +13,11 @@
       <section class="filters">
 	<div class="locations">
 	  <h3>States</h3>
+	  <h4>Nairobi, Nakuru, ...</h4>
 	</div>
 	<div class="amenities">
 	  <h3>Amenities</h3>
+	  <h4>Internet, Kitchen, ...</h4>
 	</div>
 	<button>Search</button>
       </section>
