Add text to footer

--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -22,6 +22,6 @@
 	<button>Search</button>
       </section>
     </div>
-    <footer></footer>
+    <footer>Best School</footer>
   </body>
 </html>
