Add text to footer

--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -15,6 +15,6 @@
 	<button>Search</button>
       </section>
     </div>
-    <footer></footer>
+    <footer>Best School</footer>
   </body>
 </html>
