--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -57,17 +57,23 @@
         <article>
             <h2>My Home</h2>
             <div class="price_by_night"></div>
-            <div class="information"></div>
+            <div class="information">
+                <div class="max_guest"></div>
+            </div>
         </article>
         <article>
             <h2>Tiny House</h2>
             <div class="price_by_night"></div>
-            <div class="information"></div>
+            <div class="information">
+                <div class="max_guest"></div>
+            </div>
         </article>
         <article>
             <h2>Condominium</h2>
             <div class="price_by_night"></div>
-            <div class="information"></div>
+            <div class="information">
+                <div class="max_guest"></div>
+            </div>
         </article>
       </section>
     </div>
