--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -58,21 +58,33 @@
             <h2>My Home</h2>
             <div class="price_by_night"></div>
             <div class="information">
-                <div class="max_guest"></div>
+                <div class="max_guest">
+                    <img src="./images/icon_group.png"/>
+                    <h6>2 Guests</h6>
+                </div>
+                <div class="number_rooms"></div>
             </div>
         </article>
         <article>
             <h2>Tiny House</h2>
             <div class="price_by_night"></div>
             <div class="information">
-                <div class="max_guest"></div>
+                <div class="max_guest">
+                    <img src="./images/icon_group.png"/>
+                    <h6>2 Guests</h6>
+                </div>
+                <div class="number_rooms"></div>
             </div>
         </article>
         <article>
             <h2>Condominium</h2>
             <div class="price_by_night"></div>
             <div class="information">
-                <div class="max_guest"></div>
+                <div class="max_guest">
+                    <img src="./images/icon_group.png"/>
+                    <h6>2 Guests</h6>
+                </div>
+                <div class="number_rooms"></div>
             </div>
         </article>
       </section>
