--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -56,35 +56,83 @@
         <h1>Places</h1>
         <article>
             <h2>My Home</h2>
-            <div class="price_by_night"></div>
+            <div class="price_by_night"><p>$35</p></div>
             <div class="information">
                 <div class="max_guest">
                     <img src="./images/icon_group.png"/>
                     <h6>2 Guests</h6>
                 </div>
-                <div class="number_rooms"></div>
+                <div class="number_rooms">
+                    <img src="./images/icon_bed.png"/>
+                    <h6>1 Bed</h6>
+                </div>
+                <div class="number_bathrooms">
+                    <img src="./images/icon_bath.png"/>
+                    <h6>1 Bath</h6>
+                </div>
+            </div>
+            <div class="user">
+                <h3><strong>Owner:</strong> John Lennon</h3>
+            </div>
+            <div class="description">
+                <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
             </div>
         </article>
         <article>
             <h2>Tiny House</h2>
-            <div class="price_by_night"></div>
+            <div class="price_by_night"><p>$25</p></div>
             <div class="information">
                 <div class="max_guest">
                     <img src="./images/icon_group.png"/>
                     <h6>2 Guests</h6>
                 </div>
-                <div class="number_rooms"></div>
+                <div class="number_rooms">
+                    <img src="./images/icon_bed.png"/>
+                    <h6>1 Bed</h6>
+                </div>
+                <div class="number_bathrooms">
+                    <img src="./images/icon_bath.png"/>
+                    <h6>1 Bath</h6>
+                </div>
+            </div>
+            <div class="user">
+                <h3><strong>Owner:</strong> Lex Fried</h3>
+            </div>
+            <div class="description">
+                <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
             </div>
         </article>
         <article>
             <h2>Condominium</h2>
-            <div class="price_by_night"></div>
+            <div class="price_by_night"><p>$40</p></div>
             <div class="information">
                 <div class="max_guest">
                     <img src="./images/icon_group.png"/>
                     <h6>2 Guests</h6>
                 </div>
-                <div class="number_rooms"></div>
+                <div class="number_rooms">
+                    <img src="./images/icon_bed.png"/>
+                    <h6>1 Bed</h6>
+                </div>
+                <div class="number_bathrooms">
+                    <img src="./images/icon_bath.png"/>
+                    <h6>1 Bath</h6>
+                </div>
+            </div>
+            <div class="user">
+                <h3><strong>Owner:</strong> Joe Bado</h3>
+            </div>
+            <div class="description">
+                <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
             </div>
         </article>
       </section>
